coding challenge sensory minds

--- a/src/app/components/bingo-board/bingo-board.component.html
+++ b/src/app/components/bingo-board/bingo-board.component.html
@@ -4,6 +4,6 @@
 		(click)="toggleIndex( index )"
 		class="space"
 		[class.space--selected]="selectedIndices[ index ]">
-		{{ space }}:  {{index}} selected: {{selectedIndices[ index ]}}
+		{{ space }}
 	</li>
 </ul>
